--- a/home.css
+++ b/home.css
@@ -7,4 +7,5 @@ body{
     width: 100vw;
     height: 100vh;
     background: black url('imagens/tela-home.jpg') no-repeat top center;
+    background-size: cover;
 }
